# MusicLibrary

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
core/: settings.py  urls.py
